# AOC2024

./: .gitignore  pyproject.toml
.github/: pull_request_template.md
Day_1/: day_1.py
day_10/: day_10.py
day_11/: day_11.py
day_12/: day_12.py
day_13/: day_13.py
day_14/: day_14.py
day_15/: day_15.py
day_16/: day_16.py
day_17/: day_17.py
day_18/: day_18.py
day_19/: day_19.py
day_2/: day_2.py
day_20/: day_20.py
day_21/: day_21.py
day_22/: day_22.py
day_24/: day_24.py
day_3/: day_3.py
day_4/: day_4.py
day_5/: day_5.py
day_6/: day_6.py
day_7/: day_7.py
day_8/: day_8.py
day_9/: day_9.py
